fix styles of endpoints and pings. AG-24998
Squashed commit of the following:

commit a2c1cd8d2d380d4763d946280ee07a7e6f93c04f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Sep 21 19:12:07 2023 +0300

    update adguard/translate

commit 452139d039139195cf6aaa0fd35d7db7d688f313
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Sep 21 19:10:42 2023 +0300

    update adguard/translate

commit 74c4a789770449f2f641ca2761baa9ec3f460228
Merge: dd09ec1e 73fda848
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Sep 21 17:52:02 2023 +0300

    Merge branch 'master' into fix/AG-24998

commit dd09ec1e3d3e13bfc727023f8ecaa35433353d19
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Sep 21 15:44:27 2023 +0300

    add class for location-name

commit a052abb8c1566ae8514d610480ef2743c79c27de
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Sep 21 13:40:17 2023 +0300

    revert no longer needed no-break space for ping

commit 1b981ca443008ddfff243db8c6f699d76bb602f0
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Sep 20 20:09:55 2023 +0300

    add no-break space for ping

commit 7a5c909af46c802b254636f289d7d4bbec5421a5
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Sep 20 20:02:14 2023 +0300

    fix endpoint styles

commit a9ba9563e045de670d95b90b07dc476a9057362e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Sep 20 16:13:13 2023 +0300

    fix styles of endpoints and pings

--- a/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
+++ b/src/popup/components/Settings/CurrentEndpoint/endpoint.pcss
@@ -1,9 +1,13 @@
 .endpoint {
     display: flex;
     flex-direction: row;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
     align-items: center;
     justify-content: space-between;
-    padding: 14px 20px;
+    min-height: 75px;
+    padding: 16px;
     color: var(--gray-base);
     cursor: pointer;
     border-top: 1px solid var(--grayd8);
@@ -14,13 +18,13 @@
         background: #0f0f18;
     }
 
-    &__ping {
-        font-weight: 400;
-        text-align: right;
+    &__location-container {
+        margin: 0 12px;
+        max-width: 108px;
+    }
 
-        & .ping--connected {
-            font-weight: 700;
-        }
+    & .ping--connected {
+        font-weight: 700;
     }
 
     &__ping-container {
@@ -42,7 +46,8 @@
     &__flag {
         width: 16px;
         height: 16px;
-        margin: 5px 15px 0 0;
+        min-width: 16px;
+        margin: 4px;
         box-shadow: 0 0 0 1px var(--gray-base);
         background-color: white;
         background-position: center;
@@ -53,11 +58,15 @@
         }
     }
 
+    &__location-name {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     &__title {
         position: relative;
         font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
+        line-height: 20px;
 
         &--connected {
             font-weight: 700;
@@ -66,18 +75,15 @@
 
     &__info {
         display: flex;
-
     }
 
     &__desc {
-        font-size: 14px;
-        max-width: 170px;
         color: var(--gray88);
     }
 
     &__limited-speed {
-        font-size: 14px;
         color: var(--gray88);
+        text-align: right;
     }
 }
 
@@ -101,4 +107,3 @@
         }
     }
 }
-
